Spacing working correctly, started other styles

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.Main {
+  background-image: url("../../../images/starry_sky_background.jpeg");
+  background-size: cover;
+}
 
 .App-header {
   background-color: #222;
@@ -18,7 +22,32 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.header {
+  background-color: rgb(31, 31, 181);
+}
+
+.moviesContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.movies {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+  padding: 3px;
+  align-items: center;
+  word-wrap: inherit;
+}
+
+.detail-page {
+  padding-bottom: 15px;
+}
+
+img {
+  object-fit: contain;
+  width: 200px;
+  height: 300px;
+  cursor: pointer;
 }
